Fix cover sizing on mobile

--- a/src/Components/css/DetailsBackdrop.css
+++ b/src/Components/css/DetailsBackdrop.css
@@ -43,6 +43,7 @@
   display: flex;
   flex: 3;
   position: relative;
+  overflow: hidden;
 }
 
 #modalFullscreen .coverInner {
@@ -53,7 +54,7 @@
   border-radius: 3px;
   box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.5);
   border: 1px solid #888;
-  height: 100%;
+  height: calc(100% - 2px);
 }
 
 #modalFullscreen .coverWrap .fileExists  {
